# PythonCraft

./: .gitignore  AABB.py  CMakeLists.txt  Camera.py  GpuProgram.py  GpuShader.py  LICENSE  MCRender.py  Makefile  NBT.py  PythonCraft.py  README.md  Renderer.py  Skybox.py  Tessellator.py  Texture.py  Utility.py  ZMath.py  cmake_install.cmake  cpy.bat  main  main.pyd  oldpc.py
cmake/: boost.cmake
exp/: BinaryReader.py  NBT.py  Test.java  Test.py  cpptest.py  craft_net.py  guitest.py  hw.py  listTest.py  loop.py  loopc.cpp  loopc.pyd  test.cpp  test.pyd  vertex.py
exp/zgui2/: base.py
exp/zgui2/old/: DOC.txt  __init__.py  base.py  color.py  event.py  exception.py  filedialog.py  guiglobal.py  guilocal.py  keyboard.py  layout.py  logger.py  mouse.py  resmanager.py  root.py  signal.py  slot.py  surface.py  theme.py  utils.py
level/: Block.cpp  Block.h  BlockRender.h  CMakeLists.txt  Camera.h  ChunkData.h  CommonInc.h  Frustum.cpp  Level.h  LevelRender.cpp  LevelRender.h  NBT.h  QuadBuilder.cpp  QuadBuilder.h  Quaternion.cpp  Region.cpp  Section.h  TextureManager.cpp  TextureManager.h  Vector3.cpp  Vector3.h  main.cpp  zlib.cpp
level/math/: AABB.h
saves/Lormierville/: level.dat_old
saves/Lormierville/DIM-1/region/: r.0.-1.mca  r.0.-2.mca  r.1.-2.mca
saves/Lormierville/DIM1/region/: r.0.-1.mca  r.0.-2.mca  r.1.-2.mca
saves/Lormierville/region/: r.-1.-1.mca  r.-1.-2.mca  r.-1.-3.mca  r.-1.0.mca  r.0.-3.mca  r.0.0.mca  r.1.-1.mca  r.1.-2.mca  r.1.-3.mca  r.1.0.mca
saves/Lormierville/stats/: 0a6d245d-6fac-4283-adee-a3b5edc32fca.json  Dodge8136.json
saves/house/: level.dat_mcr  level.dat_old
saves/house/region/: r.-1.-1.mca  r.-1.-2.mca  r.-1.-3.mca  r.-1.0.mca  r.0.-1.mca  r.0.-2.mca  r.0.0.mca
saves/house/stats/: 52270d30-26dc-3fd8-b0c8-21be5262d2bb.json  f699187f-af2e-34e4-a4d9-b9c5a918b208.json
src/: BlockRender.cpp  ChunkData.cpp  ChunkRender.h  CommonInc.h  Endian.h  FileFinder.h  Frustum.h  Level.cpp  LevelRender.cpp  Matrix3.cpp  Matrix3.h  Matrix4.cpp  Matrix4.h  NBT.cpp  NibbleArray.cpp  NibbleArray.h  Quaternion.h  Region.h  Section.cpp  SectionRender.cpp  SectionRender.h  Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h  World.cpp  World.h  WorldRender.cpp  WorldRender.h  gzip.cpp  main.cpp
src/math/: Sort.h
textures/: Thumbs.db  items.png.cfg  terrain.png.cfg
